fix(client/styles): 💄 melhorar contraste das cores

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -7,18 +7,18 @@
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.3052 0 0);
   --popover: oklch(0.9457 0.0163 46.569);
-  --popover-foreground: oklch(0.6636 0.1038 41.5499);
+  --popover-foreground: oklch(0.453 0.0942 41.0898);
   --primary: oklch(0.6636 0.1038 41.5499);
-  --primary-foreground: oklch(0.9731 0.0041 91.4462);
+  --primary-foreground: oklch(0.9737 0.0084 56.3151);
   --secondary: oklch(0.6663 0.0546 162.1755);
-  --secondary-foreground: oklch(0.9465 0.0119 170.2612);
+  --secondary-foreground: oklch(0.9713 0.0025 165.0756);
   --muted: oklch(0.9239 0.019 83.0636);
-  --muted-foreground: oklch(0.5391 0.0387 71.1655);
+  --muted-foreground: oklch(0.5011 0.0382 69.7353);
   --accent: oklch(0.6636 0.1038 41.5499);
-  --accent-foreground: oklch(0.9457 0.0163 46.569);
-  --destructive: oklch(0.5471 0.1438 32.9149);
+  --accent-foreground: oklch(0.9798 0.0045 78.2983);
+  --destructive: oklch(0.6168 0.1667 23.3313);
   --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.9523 0.007 88.6434);
+  --border: oklch(0.9388 0.0186 57.2107);
   --input: oklch(0.7473 0.0387 80.5476);
   --ring: oklch(0.6083 0.0623 44.3588);
   --chart-1: oklch(0.7114 0.0868 160.6714);
